--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/react": "^1.2.0",
         "@vitejs/plugin-react": "^4.3.1",
+        "bootstrap": "^5.3.3",
         "react": "^18.3.1",
+        "react-bootstrap": "^2.10.2",
         "react-dom": "^18.3.1"
     }
 }
