--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "tightenco/duster": "^1.0",
+        "squizlabs/php_codesniffer": "^3.7",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
