--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,11 +33,32 @@ jobs:
       - name: Install npm dependencies
         run: npm ci
 
-      - name: Run Duster
-        run: vendor/bin/duster
+      - name: Create database directory
+        run: mkdir -p /home/mrfiftyfifty/user-crud/database
 
-      - name: Run PHP_CodeSniffer
-        run: vendor/bin/phpcs --standard=PSR12 app/ tests/
+      - name: Create SQLite database file
+        run: touch /home/mrfiftyfifty/user-crud/database/database.sqlite
+
+      - name: Copy .env.example to .env
+        run: cp .env.example .env
+
+      - name: Add database path to .env
+        run: echo 'DB_DATABASE=/home/mrfiftyfifty/user-crud/database/database.sqlite' >> .env
+
+      - name: Generate application key
+        run: php artisan key:generate
+
+      - name: Run migrations
+        run: php artisan migrate
+
+      - name: Run PHP CodeSniffer
+        run: vendor/bin/phpcs /home/mrfiftyfifty/user-crud
+
+      - name: Run PHP Code Beautifier and Fixer
+        run: vendor/bin/phpcbf /home/mrfiftyfifty/user-crud
+
+      - name: Run Pint with fix
+        run: vendor/bin/pint
 
   test:
     runs-on: ubuntu-latest
@@ -63,20 +84,26 @@ jobs:
       - name: Install npm dependencies
         run: npm ci
 
+      - name: Create database directory
+        run: mkdir -p /home/mrfiftyfifty/user-crud/database
+
+      - name: Create SQLite database file
+        run: touch /home/mrfiftyfifty/user-crud/database/database.sqlite
+
       - name: Copy .env.example to .env
         run: cp .env.example .env
 
       - name: Add database path to .env
         run: echo 'DB_DATABASE=/home/mrfiftyfifty/user-crud/database/database.sqlite' >> .env
 
-      - name: Create SQLite database file
-        run: touch /home/mrfiftyfifty/user-crud/database/database.sqlite
-
       - name: Generate application key
         run: php artisan key:generate
 
       - name: Run migrations
         run: php artisan migrate
+
+      - name: Run build
+        run: npm run build
 
       - name: Run tests
         run: php artisan test
