--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,14 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "tightenco/duster": "^1.0",
-        "squizlabs/php_codesniffer": "^3.7",
-        "laravel/pint": "^1.0",
+        "friendsofphp/php-cs-fixer": "^3.59",
+        "laravel/pint": "^1.16",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "tightenco/duster": "^2.7"
     },
     "autoload": {
         "psr-4": {
