--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,16 +34,16 @@ jobs:
         run: npm ci
 
       - name: Create database directory
-        run: mkdir -p /home/mrfiftyfifty/user-crud/database
+        run: mkdir -p database
 
       - name: Create SQLite database file
-        run: touch /home/mrfiftyfifty/user-crud/database/database.sqlite
+        run: touch database/database.sqlite
 
       - name: Copy .env.example to .env
         run: cp .env.example .env
 
       - name: Add database path to .env
-        run: echo 'DB_DATABASE=/home/mrfiftyfifty/user-crud/database/database.sqlite' >> .env
+        run: echo 'DB_DATABASE=database/database.sqlite' >> .env
 
       - name: Generate application key
         run: php artisan key:generate
@@ -52,10 +52,10 @@ jobs:
         run: php artisan migrate
 
       - name: Run PHP CodeSniffer
-        run: vendor/bin/phpcs /home/mrfiftyfifty/user-crud
+        run: vendor/bin/phpcs .
 
       - name: Run PHP Code Beautifier and Fixer
-        run: vendor/bin/phpcbf /home/mrfiftyfifty/user-crud
+        run: vendor/bin/phpcbf .
 
       - name: Run Pint with fix
         run: vendor/bin/pint
@@ -85,25 +85,22 @@ jobs:
         run: npm ci
 
       - name: Create database directory
-        run: mkdir -p /home/mrfiftyfifty/user-crud/database
+        run: mkdir -p database
 
       - name: Create SQLite database file
-        run: touch /home/mrfiftyfifty/user-crud/database/database.sqlite
+        run: touch database/database.sqlite
 
       - name: Copy .env.example to .env
         run: cp .env.example .env
 
       - name: Add database path to .env
-        run: echo 'DB_DATABASE=/home/mrfiftyfifty/user-crud/database/database.sqlite' >> .env
+        run: echo 'DB_DATABASE=database/database.sqlite' >> .env
 
       - name: Generate application key
         run: php artisan key:generate
 
       - name: Run migrations
         run: php artisan migrate
-
-      - name: Run build
-        run: npm run build
 
       - name: Run tests
         run: php artisan test
