--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
+        "typescript": "^5.5.2",
         "vite": "^5.0.0"
     },
     "dependencies": {
