--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -129,4 +129,4 @@ jobs:
         env:
           ANSIBLE_HOST_KEY_CHECKING: "false"
         run: |
-          ansible-playbook ansible/playbook.yml -i "158.160.150.83,"
+          ansible-playbook ansible/playbook.yml -i "158.160.150.83," -u ty9991peterson
