--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -36,6 +36,11 @@
         state: started
         enabled: yes
 
+    - name: Stop Apache
+      service:
+        name: apache2
+        state: stopped
+
     - name: Clone the repository
       git:
         repo: "https://github.com/MrFiftyFifty/user-crud.git"
