--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -106,6 +106,11 @@
         mode: "0777"
         recurse: yes
 
+    - name: Install Composer dependencies
+      command: composer install --prefer-dist --no-progress --no-interaction
+      args:
+        chdir: /home/ty9991peterson/user-crud
+
     - name: Create storage symbolic link
       command: php artisan storage:link
       args:
