--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -2,7 +2,6 @@
 - name: Deploy Laravel application to Yandex Cloud
   hosts: 158.160.150.83
   become: yes
-  remote_user: ty9991peterson
   tasks:
     - name: Update apt cache
       apt:
@@ -14,21 +13,8 @@
         state: present
       loop:
         - curl
-        - sqlite3
-        - php8.3
-        - php8.3-sqlite3
-        - php8.3-xml
-        - apache2
-
-    - name: Install Docker
-      apt:
-        name: docker.io
-        state: present
-
-    - name: Install Docker Compose
-      apt:
-        name: docker-compose
-        state: present
+        - docker.io
+        - docker-compose
 
     - name: Ensure Docker service is running
       service:
@@ -36,94 +22,34 @@
         state: started
         enabled: yes
 
-    - name: Stop Apache
-      service:
-        name: apache2
+    - name: Stop existing Docker container
+      docker_container:
+        name: user-crud-app
         state: stopped
+        force_kill: yes
 
-    - name: Remove existing project directory
-      file:
-        path: /home/ty9991peterson/user-crud
+    - name: Remove existing Docker container
+      docker_container:
+        name: user-crud-app
         state: absent
-        force: yes
 
-    - name: Clone the repository
-      git:
-        repo: "https://github.com/MrFiftyFifty/user-crud.git"
-        dest: /home/ty9991peterson/user-crud
-        version: main
-
-    - name: Wait for 10 seconds before building the Docker image
-      wait_for:
-        timeout: 10
-
-    - name: Build the Docker image
-      command: docker build -t user-crud-app /home/ty9991peterson/user-crud
+    - name: Pull the latest Docker image
+      docker_image:
+        name: devdanilboe/user-crud-app
+        tag: latest
+        source: pull
 
     - name: Run the Docker container
       docker_container:
         name: user-crud-app
-        image: user-crud-app
+        image: devdanilboe/user-crud-app:latest
         state: started
         restart_policy: always
         ports:
           - "80:80"
 
-    - name: Ensure Apache is running on port 8080
-      copy:
-        dest: /etc/apache2/ports.conf
-        content: |
-          Listen 8080
-      notify:
-        - Restart Apache
-
-    - name: Create Apache config
-      copy:
-        dest: /etc/apache2/sites-available/hexletJob.conf
-        content: |
-          <VirtualHost *:8080>
-              ServerName 158.160.150.83
-              DocumentRoot /home/ty9991peterson/user-crud/public
-              <Directory /home/ty9991peterson/user-crud/public>
-                  Options Indexes FollowSymLinks
-                  AllowOverride All
-                  Require all granted
-              </Directory>
-              ErrorLog ${APACHE_LOG_DIR}/error.log
-              CustomLog ${APACHE_LOG_DIR}/access.log combined
-          </VirtualHost>
-      notify:
-        - Restart Apache
-
-    - name: Enable Apache site
-      command: a2ensite hexletJob
-      notify:
-        - Restart Apache
-
-    - name: Enable Apache rewrite module
-      command: a2enmod rewrite
-      notify:
-        - Restart Apache
-
-    - name: Set permissions on storage folder
-      file:
-        path: /home/ty9991peterson/user-crud/storage
-        state: directory
-        mode: "0777"
-        recurse: yes
-
-    - name: Install Composer dependencies
-      command: composer install --prefer-dist --no-progress --no-interaction
-      args:
-        chdir: /home/ty9991peterson/user-crud
-
-    - name: Create storage symbolic link
-      command: php artisan storage:link
-      args:
-        chdir: /home/ty9991peterson/user-crud
-
   handlers:
-    - name: Restart Apache
+    - name: Restart Docker
       service:
-        name: apache2
+        name: docker
         state: restarted
