--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
         "sentry/sentry-laravel": "^4.6",
-        "spatie/laravel-model-states": "^2.7"
+        "spatie/laravel-model-states": "^2.7",
+        "tightenco/ziggy": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
