--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.3",
         "react-dom": "^18.3.1",
-        "react-i18next": "^14.1.2"
+        "react-i18next": "^14.1.2",
+        "ziggy-js": "^2.2.1"
     }
 }
