--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Set permissions
         run: sudo chmod -R 775 storage
 
+      - name: Copy .env.example to .env
+        run: cp .env.example .env
+
       - name: Generate application key
         run: php artisan key:generate
 
