--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: user-crud-app
-    working_dir: /home/mrfiftyfifty/user-crud
+    working_dir: /var/www/html
     volumes:
-      - .:/home/mrfiftyfifty/user-crud
+      - .:/var/www/html
     ports:
       - "8000:80"
     environment:
       - DB_CONNECTION=sqlite
-      - DB_DATABASE=/home/mrfiftyfifty/user-crud/database/database.sqlite
+      - DB_DATABASE=/var/www/html/database/database.sqlite
       - APP_ENV=local
       - APP_DEBUG=true
       - APP_KEY=base64:YOUR_APP_KEY_HERE
