--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -56,12 +56,14 @@
         ports:
           - "80:80"
 
-    - name: Set permissions for project directory
-      file:
-        path: /home/ty9991peterson/user-crud
-        state: directory
-        mode: "0775"
-        recurse: yes
+    - name: Set ownership for project directory
+      command: sudo chown -R www-data:www-data /home/ty9991peterson/user-crud
+
+    - name: Set permissions for storage directory
+      command: sudo chmod -R 755 /home/ty9991peterson/user-crud/storage
+
+    - name: Set permissions for bootstrap/cache directory
+      command: sudo chmod -R 755 /home/ty9991peterson/user-crud/bootstrap/cache
 
   handlers:
     - name: Restart Docker
