--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: make install
 
       - name: Set permissions
-        run: sudo chmod -R 775 storage
+        run: sudo chmod -R 755 storage bootstrap/cache vendor
 
       - name: Copy .env.example to .env
         run: cp .env.example .env
@@ -58,7 +58,7 @@ jobs:
         run: make install
 
       - name: Set permissions
-        run: sudo chmod -R 775 storage
+        run: sudo chmod -R 755 storage bootstrap/cache vendor
 
       - name: Copy .env.example to .env
         run: cp .env.example .env
