--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -65,6 +65,19 @@
     - name: Set permissions for bootstrap/cache directory
       command: chmod -R 755 /home/ty9991peterson/user-crud/bootstrap/cache
 
+    - name: Set permissions for vendor directory
+      command: chmod -R 755 /home/ty9991peterson/user-crud/vendor
+
+    - name: Copy .env.example to .env
+      command: cp .env.example .env
+      args:
+        chdir: /home/ty9991peterson/user-crud
+
+    - name: Generate application key
+      command: php artisan key:generate
+      args:
+        chdir: /home/ty9991peterson/user-crud
+
     - name: Install Composer dependencies
       command: composer install --prefer-dist --no-progress --no-interaction
       args:
