--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Generate application key
         run: php artisan key:generate
 
+      - name: Create storage symbolic link
+        run: php artisan storage:link
+
       - name: Run Duster
         run: make lint
 
@@ -68,6 +71,9 @@ jobs:
 
       - name: Generate application key
         run: php artisan key:generate
+
+      - name: Create storage symbolic link
+        run: php artisan storage:link
 
       - name: Run migrations
         run: php artisan migrate
