--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,9 @@ jobs:
       - name: Add database path to .env
         run: echo 'DB_DATABASE=/home/ty9991peterson/user-crud/database/database.sqlite' >> .env
 
+      - name: Create SQLite database file
+        run: touch /home/ty9991peterson/user-crud/database/database.sqlite
+
       - name: Generate application key
         run: php artisan key:generate
 
