--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,10 +52,10 @@ jobs:
         run: cp .env.example .env
 
       - name: Add database path to .env
-        run: echo 'DB_DATABASE=/home/mrfiftyfifty/user-crud/database/database.sqlite' >> .env
+        run: echo 'DB_DATABASE=$(pwd)/database/database.sqlite' >> .env
 
       - name: Create database file
-        run: mkdir -p database && touch /home/mrfiftyfifty/user-crud/database/database.sqlite
+        run: mkdir -p database && touch database/database.sqlite
 
       - name: Generate application key
         run: php artisan key:generate
