--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,17 @@ jobs:
       - name: Install npm and composer dependencies
         run: make install
 
+      - name: Copy .env.example to .env
+        run: cp .env.example .env
+
+      - name: Generate application key
+        run: php artisan key:generate
+
+      - name: Create storage symbolic link
+        run: php artisan storage:link
+
       - name: Run Duster
-        run: vendor/bin/duster lint
+        run: make lint
 
   test:
     runs-on: ubuntu-latest
@@ -46,19 +55,19 @@ jobs:
           node-version: "18"
 
       - name: Install npm and composer dependencies
-        run: make install
+        run: make installr
 
       - name: Copy .env.example to .env
         run: cp .env.example .env
 
       - name: Add database path to .env
-        run: echo 'DB_DATABASE=$(pwd)/database/database.sqlite' >> .env
-
-      - name: Create database file
-        run: mkdir -p database && touch database/database.sqlite
+        run: echo 'DB_DATABASE=/home/mrfiftyfifty/user-crud/database/database.sqlite' >> .env
 
       - name: Generate application key
         run: php artisan key:generate
+
+      - name: Create SQLite database file
+        run: touch database/database.sqlite
 
       - name: Create storage symbolic link
         run: php artisan storage:link
