--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -56,6 +56,22 @@
         ports:
           - "80:80"
 
+    - name: Set ownership for project directory
+      command: chown -R www-data:www-data /home/ty9991peterson/user-crud
+
+    - name: Set permissions for project directory
+      command: chmod -R 777 /home/ty9991peterson/user-crud
+
+    - name: Install Composer dependencies
+      command: composer install --prefer-dist --no-progress --no-interaction
+      args:
+        chdir: /home/ty9991peterson/user-crud
+
+    - name: Install npm dependencies
+      command: npm ci
+      args:
+        chdir: /home/ty9991peterson/user-crud
+
     - name: Copy .env.example to .env
       command: cp .env.example .env
       args:
@@ -73,16 +89,6 @@
 
     - name: Create storage symbolic link
       command: php artisan storage:link
-      args:
-        chdir: /home/ty9991peterson/user-crud
-
-    - name: Install Composer dependencies
-      command: composer install --prefer-dist --no-progress --no-interaction
-      args:
-        chdir: /home/ty9991peterson/user-crud
-
-    - name: Install npm dependencies
-      command: npm ci
       args:
         chdir: /home/ty9991peterson/user-crud
 
