--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,17 +24,8 @@ jobs:
       - name: Install npm and composer dependencies
         run: make install
 
-      - name: Copy .env.example to .env
-        run: cp .env.example .env
-
-      - name: Generate application key
-        run: php artisan key:generate
-
-      - name: Create storage symbolic link
-        run: php artisan storage:link
-
       - name: Run Duster
-        run: make lint
+        run: vendor/bin/duster lint
 
   test:
     runs-on: ubuntu-latest
@@ -61,7 +52,10 @@ jobs:
         run: cp .env.example .env
 
       - name: Add database path to .env
-        run: echo 'DB_DATABASE=database/database.sqlite' >> .env
+        run: echo 'DB_DATABASE=$(pwd)/database/database.sqlite' >> .env
+
+      - name: Create database file
+        run: mkdir -p database && touch database/database.sqlite
 
       - name: Generate application key
         run: php artisan key:generate
