--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,6 +69,9 @@ jobs:
       - name: Run migrations
         run: php artisan migrate
 
+      - name: Build frontend assets
+        run: npm run build
+
       - name: Run build
         run: make build
 
