--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -24,6 +24,19 @@
         state: started
         enabled: yes
 
+    - name: Check if project directory exists
+      stat:
+        path: /home/ty9991peterson/user-crud
+      register: project_dir
+
+    - name: Create project directory if it does not exist
+      file:
+        path: /home/ty9991peterson/user-crud
+        state: directory
+        owner: www-data
+        group: www-data
+      when: project_dir.stat.exists == False
+
     - name: Check if Docker container exists
       shell: docker ps -a --filter "name=user-crud-app" --format "{{'{{'}}.Names{{'}}'}}"
       register: container_exists
@@ -58,9 +71,11 @@
 
     - name: Set ownership for project directory
       command: chown -R www-data:www-data /home/ty9991peterson/user-crud
+      when: project_dir.stat.exists == True
 
     - name: Set permissions for project directory
       command: chmod -R 777 /home/ty9991peterson/user-crud
+      when: project_dir.stat.exists == True
 
     - name: Install Composer dependencies
       command: composer install --prefer-dist --no-progress --no-interaction
